--- a/index.html
+++ b/index.html
@@ -1,40 +1,65 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/webstorm-icon-logo.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WS playground</title>
-  <link rel="stylesheet" href="/style.css">
+    <meta charset="UTF-8"/>
+    <!--    todo change icon-->
+    <link rel="icon" type="image/svg+xml" href="/public/webstorm-icon-logo.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Супер-сайт</title>
+    <!--    todo change style.css-->
+    <link rel="stylesheet" href="public/style.css">
 </head>
+
 <body>
-<header class="logo">
-  <a href="https://www.jetbrains.com/webstorm/">
-    <img src="/webstorm-logo.svg" alt="WebStorm logo" width="344"
-         height="90">
-  </a>
-</header>
-<main id="app">
-  <h1 class="title">
-    Thank you for trying it out. <br /> Your first project is up and running
-    now.
-  </h1>
-  <section class="counter">
-    <div class="counter-info">
-      <p class="counter-text">Counter is</p>
-      <p class="counter-value" id="counter-value"></p>
+
+<div class="gradient_background">
+    <header class="container">
+        <span class="logo">Logo</span>
+        <!--        todo make a bubble on the right side of page-->
+        <nav>
+            <ul>
+                <li><a href="/" class="top_bubble active">Менюха 1</a></li>
+                <li><a href="/survey" class="top_bubble">Менюха 2</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="two-columns">
+            <div class="hero">
+                <h2>Header!</h2>
+                <br>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque
+                sem placerat.
+                In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor.
+                Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
+                integer nunc posuere.
+                Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos
+                himenaeos.
+            </div>
+            <img src="public/static/logotip.jpg" alt="logotip">
+        </div>
     </div>
-    <div class="counter-interaction">
-      <button id="increaseByOne" type="button">+1</button>
-      <button id="increaseByTwo" type="button">+2</button>
-      <button id="decreaseByOne" type="button">-1</button>
-      <button id="decreaseByTwo" type="button">-2</button>
+</div>
+
+<img class='wallpaper' src="public/static/wallpaper.jpg" alt="wallpaper">
+
+<div class="gradient_background">
+    <div class="container">
+        <div class="hero">
+            <h2>Header!</h2>
+            <br>
+            Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque
+            sem placerat.
+            In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor.
+            Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia
+            integer nunc posuere.
+            Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos
+            himenaeos.
+        </div>
     </div>
-  </section>
-</main>
-<footer class="technologies">
-  <img src="/technologies.svg" alt="List of supported technologies">
-</footer>
-<script type="module" src="/src/main.js"></script>
+</div>
+
 </body>
+
 </html>
