--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <link rel="icon" type="image/svg+xml" href="/public/static/logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Супер-сайт</title>
-    <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="public/styles/style.css">
 </head>
 
 <body>
 
+<!--todo адаптивность для телефонов-->
+
 <div class="gradient_background">
-    <img class='wallpaper' src="public/static/long_wallpaper.jpg" alt="wallpaper">
+    <img class='wallpaper' src="public/static/top_wallpaper.jpg" alt="wallpaper">
 
     <header class="container">
         <span class="logo">Приглашение</span>
         <!--        todo make a bubble on the right side of page-->
-        <!--        <nav>-->
-        <!--            <ul>-->
-        <!--                <li><a href="/" class="top_bubble active">Наверх</a></li>-->
-        <!--                <li><a href="/survey" class="top_bubble">Анкета гостя</a></li>-->
-        <!--            </ul>-->
-        <!--        </nav>-->
+        <!--                <nav>-->
+        <!--                    <ul>-->
+        <!--                        <li><a href="/" class="top_bubble active">Наверх</a></li>-->
+        <!--                        <li><a href="/survey" class="top_bubble">Анкета гостя</a></li>-->
+        <!--                    </ul>-->
+        <!--                </nav>-->
         <br>
         <h2>на празднование нашего бракосочетания!</h2>
         <br><br><br>
@@ -32,7 +34,7 @@
     <div class="container">
         <div class="two-columns">
             <div class="hero">
-                <h2>Где собираемся?</h2>
+                <h2>Где?</h2>
                 <br><br><br>
                 <p>ТРЦ Левый берег, Ленинский проспект, 1д</p>
                 <br>
@@ -49,12 +51,27 @@
             <img src="public/static/map.jpg" alt="logotip">
         </div>
     </div>
+
+    <div class="container hero">
+        <h2>Что вас ожидает?</h2>
+        <div class="tile-section">
+            <div class="tile">
+                <img src="public/static/tiles/tile_vip.jpeg" alt="tile">
+                <span class="tile">Вип-зал</span>
+            </div>
+            <div class="tile">
+                <img src="public/static/tiles/tile_steak.jpg" alt="tile">
+                <span class="tile">Классическая кухня</span>
+            </div>
+            <div class="tile">
+                <img src="public/static/tiles/tile_cake.jpg" alt="tile">
+                <span class="tile">Десерт</span>
+            </div>
+        </div>
+    </div>
 </div>
 
-<!--todo вертушка с панорамой-->
-<img class='wallpaper' src="public/static/wallpaper.jpg" alt="wallpaper">
-
-<div class="gradient_background">
+<div class="image_background">
     <div class="container">
         <div class="hero">
             <h2>Анкета гостя</h2>
@@ -103,6 +120,11 @@
 
             <br>
             <button class>Отправить ответ</button>
+        </div>
+    </div>
+    <div class="container">
+        <div class="hero">
+            <h2 align="center">Ждем вас!</h2>
         </div>
     </div>
 </div>
