--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <img class='wallpaper' src="public/static/top_wallpaper.jpg" alt="wallpaper">
 
     <header class="container">
+        <nav>
+            <ul>
+<!--                todo make optional page with wishlist-->
+                <li><a href="/wishlist" class="top_bubble">Вишлист подарков</a></li>
+            </ul>
+        </nav>
+
         <span class="logo">Приглашение</span>
-        <!--        todo make a bubble on the right side of page-->
-        <!--                <nav>-->
-        <!--                    <ul>-->
-        <!--                        <li><a href="/" class="top_bubble active">Наверх</a></li>-->
-        <!--                        <li><a href="/survey" class="top_bubble">Анкета гостя</a></li>-->
-        <!--                    </ul>-->
-        <!--                </nav>-->
         <br>
         <h2>на празднование нашего бракосочетания!</h2>
         <br><br><br>
@@ -46,6 +46,7 @@
                 <h2>Когда?</h2>
                 <br><br><br>
                 <p>Начало: <b>18:00</b></p>
+                <br>
                 <p>Конец: <b>22:00</b></p>
             </div>
             <img src="public/static/map.jpg" alt="logotip">
@@ -73,53 +74,46 @@
 
 <div class="image_background">
     <div class="container">
-        <div class="hero">
+        <div class="hero" align="center">
             <h2>Анкета гостя</h2>
-            <br><br><br>
-            <p><b>Представьтесь, пожалуйста. Если вы планируете прийти с супругом/супругой или другими членами семьи,
-                укажите все имена.</b></p>
-            <input type="text">
-            <br>
-            <p><b>Какие напитки предпочитаете?</b></p>
-            <div class="two-columns">
-                <div>
-                    <input type="checkbox"> <span>Вино белое</span>
+            <form class="survey-form">
+                <div class="survey-question">
+                    <h3>Укажите имена вас и ваших спутников:</h3>
+                    <input type="text" class="survey-answer-group">
                 </div>
-                <div>
-                    <input type="checkbox"> <span>Вино красное</span>
-                </div>
-                <div>
-                    <input type="checkbox"> <span>Шампанское</span>
-                </div>
-                <div>
-                    <input type="checkbox"> <span>Коньяк</span>
-                </div>
-                <div>
-                    <input type="checkbox"> <span>Безалкогольные напитки</span>
-                </div>
-            </div>
-            <br>
-            <p><b>Основное блюдо:</b></p>
-            <div class="two-columns">
-                <div>
-                    <input type="radio"> <span>Птица</span>
-                </div>
-                <div>
-                    <input type="radio"> <span>Красное мясо</span>
-                </div>
-                <div>
-                    <input type="radio"> <span>Рыба</span>
-                </div>
-                <div>
-                    <input type="radio"> <span>Вегетарианское блюдо</span>
-                </div>
-            </div>
-            <br>
-            <p><b>Укажите аллергены, если таковые есть:</b></p>
-            <input type="text">
 
-            <br>
-            <button class>Отправить ответ</button>
+                <div class="survey-question">
+                    <h3>Какие напитки предпочитаете?</h3>
+                    <div>
+                        <div class="survey-answer-group">
+                            <label><input type="checkbox"> Вино белое</label>
+                            <label><input type="checkbox"> Шампанское</label>
+                            <label><input type="checkbox"> Вино красное</label>
+                            <label><input type="checkbox"> Безалкогольные напитки</label>
+                            <label><input type="checkbox"> Коньяк</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="survey-question">
+                    <h3>Основное блюдо:</h3>
+                    <div class="survey-answer-group">
+                        <label><input type="radio"> Птица</label>
+                        <label><input type="radio"> Красное мясо</label>
+                        <label><input type="radio"> Рыба</label>
+                        <label><input type="radio"> Вегетарианское блюдо</label>
+                    </div>
+                </div>
+
+                <div class="survey-question">
+                    <h3>Укажите аллергены, если таковые есть:</h3>
+                    <input type="text" class="survey-answer-group">
+                </div>
+
+                <div class="survey-question">
+                    <a href="/send-survey" class="survey-submit-button">Отправить ответ</a></li>
+                </div>
+            </form>
         </div>
     </div>
     <div class="container">
