пофикшены переходы между страницами и бесконечный черный фон

--- a/web/wishlist.html
+++ b/web/wishlist.html
@@ -6,17 +6,17 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Супер-сайт</title>
-    <link rel="stylesheet" href="/public/styles/style.css">
+    <link rel="stylesheet" href="../public/styles/style.css">
+    <base href="../../../invitation/">
 </head>
 
 <body>
 
-<div class="gradient_background">
+<div class="simple_background">
     <header class="container">
         <nav>
             <ul>
-                <!--                todo make optional page with wishlist-->
-                <li><a href="./web/index.html" class="top_bubble">Назад</a></li>
+                <li><a href="index.html" class="top_bubble">Назад</a></li>
             </ul>
         </nav>
         <span class="logo">Виш-лист</span>
@@ -27,10 +27,10 @@
 
     <div class="container hero">
         <div class="masonry">
-            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png"></div>
+            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png" alt="tile"></div>
             <div class="item big"><img src="../public/static/wishtiles/bedsheets.webp" alt="tile"></div>
             <div class="item"><img src="../public/static/wishtiles/hairdryer.jpg" alt="tile"></div>
-            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png"></div>
+            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png" alt="tile"></div>
 
             <div class="item"><img src="../public/static/wishtiles/kitchen_machine.jpg" alt="tile"></div>
             <div class="item big"><img src="../public/static/wishtiles/poster.jpg" alt="tile"></div>
@@ -39,9 +39,9 @@
             <div class="item big"><img src="../public/static/wishtiles/lighttower.webp" alt="tile"></div>
             <div class="item small"><img src="../public/static/wishtiles/chess.webp" alt="tile"></div>
 
-            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png"></div>
+            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png" alt="tile"></div>
             <div class="item"><img src="../public/static/wishtiles/game.webp" alt="tile"></div>
-            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png"></div>
+            <div class="item small"><img src="../public/static/wishtiles/empty_tile.png" alt="tile"></div>
         </div>
 
         <!--        <div class="tile-section">-->
