радиобаттоны в одну группу

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 <br><br><br>
                 <p>ТРЦ Левый берег, Ленинский проспект, 1д</p>
                 <br>
-                <h1>Стейк-хаус PANORAMA</h1>
+              <h1>Стейк-хаус</h1>
+              <br>
+              <h1>PANORAMA</h1>
                 <br>
                 <p>Малый банкетный зал</p>
             </div>
@@ -110,12 +112,11 @@
 
                 <div class="survey-question">
                     <h3>Основное блюдо:</h3>
-                    <!--                    todo make only one radiobutton selectable-->
                     <div class="survey-answer-group">
-                        <label><input type="radio"> Птица</label>
-                        <label><input type="radio"> Красное мясо</label>
-                        <label><input type="radio"> Рыба</label>
-                        <label><input type="radio"> Вегетарианское блюдо</label>
+                        <label><input type="radio" name="main-dish"> Птица</label>
+                        <label><input type="radio" name="main-dish"> Красное мясо</label>
+                        <label><input type="radio" name="main-dish"> Рыба</label>
+                        <label><input type="radio" name="main-dish"> Вегетарианское блюдо</label>
                     </div>
                 </div>
 
