--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <!--    todo change icon-->
-    <link rel="icon" type="image/svg+xml" href="/logo.png"/>
+    <link rel="icon" type="image/svg+xml" href="/icons/hearts.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Супер-сайт</title>
     <link rel="stylesheet" href="./public/styles/style.css">
